# chess

./: .gitignore  CMakeLists.txt  README.md
src/: chessboard-interface.hh  main.cc  pgn-exception.hh  pgn-parser.cc  position.hh  position.hxx  uci.cc
src/chess_engine/: chessboard.hh
src/chess_engine/ai/: evaluation.cc  evaluation.hh  move-heuristics.cc  move-heuristics.hh  move-ordering.cc  move-ordering.hh  search.cc  search.hh  ttable-entry.cc  ttable-entry.hh  ttable.cc  ttable.hh  uci.cc  uci.hh  zobrist.cc  zobrist.hh
src/chess_engine/board/: attacks.cc  attacks.hh  bishop.cc  bishop.hh  bitboard.cc  bitboard.hh  chessboard.cc  chessboard.hh  color.hh  king.cc  king.hh  knight.cc  knight.hh  magic.cc  magic.hh  move.cc  move.hh  movegen.cc  movegen.hh  pawn.cc  pawn.hh  perft.cc  perft.hh  pgn.cc  pgn.hh  piece-type.hh  position.hh  position.hxx  queen.cc  queen.hh  rook.cc  rook.hh  rule.cc  rule.hh
src/listener/: chessboard-listener.cc  chessboard-listener.hh  listener-manager.cc  listener-manager.hh  listener.hh
src/parsing/: fen-object.cc  fen-object.hh  fen-rank.cc  fen-rank.hh  option-parser.cc  option-parser.hh  perft-object.cc  perft-object.hh  perft-parser.cc  perft-parser.hh  pgn-move.cc  pgn-move.hh  pgn-parser.cc  pgn-parser.hh
src/utils/: logger.cc  logger.hh  utils.hh
tests/: king-test.hh  main-test.cc  pawn.cxx  pawn.hh  test_attacks.hh  test_bishop.hh  test_bitboard.hh  test_chessboard.hh  test_king.hh  test_knight.hh  test_main.cc  test_move.hh  test_move_ordering.hh  test_pawn.hh  test_queen.hh  test_rook.hh  test_zobrist.hh  testsuite_pgn.sh
tests/given_perft/: numptychessposition5-depth-1.perft  numptychessposition5-depth-2.perft  numptychessposition5-depth-3.perft  numptychessposition5-depth-4.perft  numptychessposition5-depth-5.perft  numptychessposition5-depth-6.perft
tests/given_pgn/: draw.pgn  stalemate_enpassant.pgn  testsuite.sh
tools/: perft-testsuite.py  perft.py
